/*
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 *
 * Copyright (c) 2023-present, Ukama Inc.
 */

syntax = "proto3";

option go_package = "github.com/ukama/ukama/systems/common/pb/gen/events";

package ukama.events.v1;

import "validator.proto";
import "google/protobuf/timestamp.proto";


message Invoice {
    string id = 1 [(validator.field) = {uuid_ver: 4, string_not_empty: true}];
    string subscriberId = 2 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name = "subscriber_id"];
    string networkId = 3 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name = "network_id"];
    google.protobuf.Timestamp period = 4;
    RawInvoice rawInvoice = 5 [json_name = "raw_invoice"];
    bool isPaid = 6 [json_name = "is_paid"];
}


message RawInvoice {
    int64 sequentialId = 1 [json_name = "sequential_id"];
    string number = 2 [json_name = "number"];
    string issuingDate = 3 [json_name = "issuing_date"];
    string status = 4 [json_name = "status"];
    string paymentStatus = 5 [json_name = "payment_status"];
    int64 amountCents = 6 [json_name = "amount_cents"];
    string amountCurrency = 7 [json_name = "amount_currency"];
    int64 vatAmountCents = 8 [json_name = "vat_amount_cents"];
    string vatAmountCurrency = 9 [json_name = "vat_amount_currency"];
    int64 totalAmountCents = 10 [json_name = "total_amount_cents"];
    string totalAmountCurrency = 11 [json_name = "total_amount_currency"];
    string fileURL = 12 [json_name = "file_url"];
    Customer customer = 13 [json_name = "customer"];
    repeated Subscription subscriptions = 14 [json_name = "subscriptions"];
    repeated Fee fees = 15 [json_name = "fees"];
    repeated InvoiceMetadataResponse metadata = 16 [json_name = "metadata"];
}

message Subscription {
    string externalCustomerId = 1 [json_name = "external_customer_id"];
    string externalId = 2 [json_name = "external_id"];
    string planCode = 3 [json_name = "plan_code"];
    string status = 4 [json_name = "status"];
    google.protobuf.Timestamp createdAt = 5 [json_name = "created_at"];
    google.protobuf.Timestamp startedAt = 6 [json_name = "started_at"];
    google.protobuf.Timestamp canceldAt = 7 [json_name = "canceled_at"];
}


message Customer {
    string externalId = 1 [json_name = "external_id"];
    string name = 2 [json_name = "name"];
    string email = 3 [json_name = "email"];
    string addressLine1 = 4 [json_name = "address_line1"];
    string city = 5 [json_name = "city"];
    string state = 6 [json_name = "state"];
    string zipcode = 7 [json_name = "zipcode"];
    string country = 8 [json_name = "country"];
    string legalName = 9 [json_name = "legal_name"];
    string legalNumber = 10 [json_name = "legal_number"];
    string phone = 11 [json_name = "phone"];
    double vatRate = 12 [json_name = "vat_rate"];
}

message Fee {
    int64 amountCents = 1 [json_name = "amount_cents"];
    string amountCurrency = 2 [json_name = "amount_currency"];
    int64 vatAmountCents = 3 [json_name = "vat_amount_cents"];
    string vatAmountCurrency = 4 [json_name = "vat_amount_currency"];
    int64 totalAmountCents = 5 [json_name = "total_amount_cents"];
    string totalAmountCurrency = 6 [json_name = "total_amount_currency"];
    int64 eventsCount = 7 [json_name = "events_count"];
    double units = 8 [json_name = "units"];
    FeeItem item = 9 [json_name = "item"];
}

message FeeItem {
    string type = 1 [json_name = "type"];
    string code = 2 [json_name = "code"];
    string name = 3 [json_name = "name"];
}


message InvoiceMetadataResponse {
    string key = 1 [json_name = "key"];
    string value = 2 [json_name = "value"];
    google.protobuf.Timestamp createdAt = 3 [json_name = "created_at"];
}

